--- a/src/Screens/css/register.css
+++ b/src/Screens/css/register.css
@@ -34,7 +34,8 @@ button{
     border: none;
     box-shadow: .5px .5px 10px 0px black;
     cursor: pointer;
-    margin-top: 15px;
+    margin: 20px;
+    margin-left: 50px;
     
 }
 .input{
@@ -66,7 +67,7 @@ button{
         width: 400px;
         box-shadow:none
     }
-    }
+}
 
 
     
